# intel-vaapi-driver

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  COPYING  Makefile.am  NEWS  README  README.md  TESTING  autogen.sh  configure.ac  meson.build  meson_options.txt  style_unify
src/: Android.mk  Makefile.am  Makefile.sources  config_android.h  config_android.h.in  dso_utils.c  dso_utils.h  gen10_encoder_vp8.c  gen10_hcp_common.c  gen10_hcp_common.h  gen10_hevc_enc_common.c  gen10_hevc_enc_common.h  gen10_hevc_enc_kernel.h  gen10_hevc_enc_kernels_binary.c  gen10_hevc_enc_kernels_binary.h  gen10_hevc_encoder.c  gen10_hevc_encoder.h  gen10_huc_common.c  gen10_huc_common.h  gen10_vdenc_common.c  gen10_vdenc_common.h  gen10_vdenc_vp9.c  gen10_vdenc_vp9.h  gen6_mfc.c  gen6_mfc.h  gen6_mfc_common.c  gen6_mfd.c  gen6_mfd.h  gen6_vme.c  gen6_vme.h  gen75_mfc.c  gen75_mfd.c  gen75_picture_process.c  gen75_picture_process.h  gen75_vme.c  gen75_vpp_gpe.c  gen75_vpp_gpe.h  gen75_vpp_vebox.c  gen75_vpp_vebox.h  gen7_mfc.c  (+129 more)
src/shaders/: Makefile.am  gpp.py
src/shaders/brc/: Makefile.am
src/shaders/brc/bsw/: Makefile.am  hme_downscale_genx_0.g8b  hme_genx_0.g8b  vp8_brc_init_genx_0.g8b  vp8_brc_reset_genx_0.g8b  vp8_brc_update_genx_0.g8b  vp8_enc_genx_0.g8b  vp8_enc_genx_1.g8b  vp8_enc_genx_2.g8b  vp8_intra_distortion_genx_0.g8b  vp8_mpu_genx_0.g8b  vp8_tpu_genx_0.g8b
src/shaders/brc/cnl/: Makefile.am  hme_downscale_genx_0.g10b  hme_genx_0.g10b  vp8_brc_init_genx_0.g10b  vp8_brc_reset_genx_0.g10b  vp8_brc_update_genx_0.g10b  vp8_enc_genx_0.g10b  vp8_enc_genx_1.g10b  vp8_enc_genx_2.g10b  vp8_intra_distortion_genx_0.g10b  vp8_mpu_genx_0.g10b  vp8_tpu_genx_0.g10b  vp9_dys.g10b  vp9_vdenc_hme_vp9_streamin.g10b
src/shaders/brc/skl/: Makefile.am  hme_downscale_genx_0.g9b  hme_genx_0.g9b  vp8_brc_init_genx_0.g9b  vp8_brc_reset_genx_0.g9b  vp8_brc_update_genx_0.g9b  vp8_enc_genx_0.g9b  vp8_enc_genx_1.g9b  vp8_enc_genx_2.g9b  vp8_intra_distortion_genx_0.g9b  vp8_mpu_genx_0.g9b  vp8_tpu_genx_0.g9b
src/shaders/h264/: Makefile.am
src/shaders/h264/ildb/: AVC_ILDB.inc  AVC_ILDB_Child_Field_UV.asm  AVC_ILDB_Child_Field_Y.asm  AVC_ILDB_Child_Mbaff_UV.asm  AVC_ILDB_Child_Mbaff_Y.asm  AVC_ILDB_Child_UV.asm  AVC_ILDB_Child_Y.asm  AVC_ILDB_Chroma_Core.asm  AVC_ILDB_Chroma_Core_Mbaff.asm  AVC_ILDB_CloseGateway.asm  AVC_ILDB_Dep_Check.asm  AVC_ILDB_Filter_Mbaff_UV_h.asm  AVC_ILDB_Filter_Mbaff_UV_v.asm  AVC_ILDB_Filter_Mbaff_Y_h.asm  AVC_ILDB_Filter_Mbaff_Y_v.asm  AVC_ILDB_Filter_UV_h.asm  AVC_ILDB_Filter_UV_v.asm  AVC_ILDB_Filter_Y_h.asm  AVC_ILDB_Filter_Y_v.asm  AVC_ILDB_ForwardMsg.asm  AVC_ILDB_LumaThrdLimit.asm  AVC_ILDB_Luma_Core.asm  AVC_ILDB_Luma_Core_Mbaff.asm  AVC_ILDB_Root_UV.asm  (+62 more)
src/shaders/mpeg2/: Makefile.am
src/shaders/post_processing/: Makefile.am  pl3_load_save_nv12.asm
src/shaders/render/: Makefile.am  exa_wm.g4i  exa_wm_clear.g7i  exa_wm_clear.g8b  exa_wm_clear.g9a  exa_wm_clear.g9b  exa_wm_src_affine.g4b  exa_wm_src_affine.g6a  exa_wm_src_affine.g6b  exa_wm_src_affine.g7a  exa_wm_src_affine.g7b  exa_wm_src_affine.g8a  exa_wm_src_affine.g8b  exa_wm_src_affine.g9a  exa_wm_src_sample_argb.g4a  exa_wm_src_sample_argb.g4b  exa_wm_src_sample_argb.g4b.gen5  exa_wm_src_sample_argb.g6a  exa_wm_src_sample_argb.g6b  exa_wm_src_sample_argb.g7a  exa_wm_src_sample_argb.g7b  exa_wm_src_sample_argb.g8a  exa_wm_src_sample_argb.g8b  exa_wm_src_sample_argb.g9a  exa_wm_src_sample_argb.g9b  exa_wm_src_sample_planar.g7a  exa_wm_src_sample_planar.g7b  exa_wm_src_sample_planar.g7b.haswell  exa_wm_src_sample_planar.g8a  exa_wm_src_sample_planar.g8b  exa_wm_src_sample_planar.g9a  exa_wm_src_sample_planar.g9b  exa_wm_write.g7a  exa_wm_write.g7b  exa_wm_write.g7i  exa_wm_write.g8a  exa_wm_write.g8b  exa_wm_write.g9a  exa_wm_write.g9b  exa_wm_xy.g4b  (+22 more)
src/shaders/utils/: Makefile.am  end_thread.asm  mfc_batchbuffer.inc  mfc_batchbuffer_avc_inter.asm  mfc_batchbuffer_avc_inter.g6a  mfc_batchbuffer_avc_inter.g6b  mfc_batchbuffer_avc_inter.g7b  mfc_batchbuffer_avc_inter.g9a  mfc_batchbuffer_avc_inter.g9b  mfc_batchbuffer_avc_intra.asm  mfc_batchbuffer_avc_intra.g6a  mfc_batchbuffer_avc_intra.g6b  mfc_batchbuffer_avc_intra.g7b  mfc_batchbuffer_avc_intra.g9a  mfc_batchbuffer_avc_intra.g9b  mfc_batchbuffer_head.asm  mfc_batchbuffer_hsw.asm  mfc_batchbuffer_hsw.g75a  mfc_batchbuffer_hsw.g75b  mfc_batchbuffer_hsw.g8b  mfc_batchbuffer_hsw.g9a  mfc_batchbuffer_hsw.g9b  mfc_batchbuffer_hsw.inc  mfc_batchbuffer_tail.asm
src/shaders/vme/: Makefile.am  batchbuffer.asm  batchbuffer.g6a  batchbuffer.g6b  batchbuffer.g75a  batchbuffer.g75b  batchbuffer.g7a  batchbuffer.g7b  batchbuffer.inc  gen6_batchbuffer_header.inc  gen6_vme_header.inc  gen7_batchbuffer_header.inc  gen7_vme_header.inc  inter_bframe_gen8.asm  inter_bframe_gen8.g8b  inter_bframe_gen9.g9a  inter_bframe_gen9.g9b  inter_bframe_haswell.asm  inter_bframe_haswell.g75a  inter_bframe_haswell.g75b  inter_bframe_ivb.asm  inter_bframe_ivb.g7a  inter_bframe_ivb.g7b  inter_frame.asm  inter_frame.g6a  inter_frame.g6b  inter_frame.g7a  inter_frame.g7b  inter_frame_gen8.asm  inter_frame_gen8.g8a  inter_frame_gen8.g8b  inter_frame_gen9.g9b  inter_frame_haswell.asm  inter_frame_haswell.g75a  inter_frame_haswell.g75b  inter_frame_ivb.asm  inter_frame_ivb.g7a  inter_frame_ivb.g7b  intra_frame.asm  intra_frame.g6a  (+47 more)
test/: Makefile.am  i965_avcd_config_test.cpp  i965_avce_config_test.cpp  i965_avce_context_test.cpp  i965_avce_test_common.cpp  i965_avce_test_common.h  i965_chipset_test.cpp  i965_config_packed_header_test.cpp  i965_config_test.cpp  i965_config_test.h  i965_initialize_test.cpp  i965_internal_decl.h  i965_jpeg_decode_test.cpp  i965_jpeg_encode_test.cpp  i965_jpeg_test_data.cpp  i965_jpeg_test_data.h  i965_jpegd_config_test.cpp  i965_jpege_config_test.cpp  i965_streamable.h  i965_surface_test.cpp  i965_test_environment.cpp  i965_test_environment.h  i965_test_fixture.cpp  i965_test_fixture.h  i965_test_image_utils.cpp  i965_test_image_utils.h  meson.build  object_heap_test.cpp  test.h  test_main.cpp  test_utils.h
test/gtest/docs/: AdvancedGuide.md  XcodeGuide.md
(+402 files in other folders)
